--- a/.env.sample
+++ b/.env.sample
@@ -1,6 +1,6 @@
 APP_ENV=local # e.g. local, development, staging, production
 
 DB_NAME=test
-DB_HOST=localhost
+DB_HOST=127.0.0.1
 DB_USERNAME=user
 DB_PASSWORD=password
